--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="column right">
                     <div class="text">I'm Jayaram and I'm a <span class="typing-2"></span></div>
                     <p>I Graduated in ELECTRONICS AND COMMUNICATION ENGINEERING and currently working as SYSTEM ENGINEER in INFOSYS COMPANY and A DATA SCIENCE learner in INNOMATICS RESEARCH LABS. </p>
-                    <a href="images/Resume.pdf">Download CV</a>
+                    <a href="images/Jayaram Resume.pdf">Download CV</a>
                 </div>
             </div>
         </div>
